Добавлен эндпойнт на редактирование задачи, исправлено получение задачи из БД по ID
